; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-sc27xx-bltc.c_sc27xx_led_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-sc27xx-bltc.c_sc27xx_led_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regmap = type { i32 }

@SC27XX_MODULE_EN0 = common dso_local global i32 0, align 4
@SC27XX_BLTC_EN = common dso_local global i32 0, align 4
@SC27XX_CLK_EN0 = common dso_local global i32 0, align 4
@SC27XX_RTC_EN = common dso_local global i32 0, align 4
@SC27XX_RGB_CTRL = common dso_local global i32 0, align 4
@SC27XX_RGB_PD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regmap*)* @sc27xx_led_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sc27xx_led_init(%struct.regmap* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.regmap*, align 8
  %4 = alloca i32, align 4
  store %struct.regmap* %0, %struct.regmap** %3, align 8
  %5 = load %struct.regmap*, %struct.regmap** %3, align 8
  %6 = load i32, i32* @SC27XX_MODULE_EN0, align 4
  %7 = load i32, i32* @SC27XX_BLTC_EN, align 4
  %8 = load i32, i32* @SC27XX_BLTC_EN, align 4
  %9 = call i32 @regmap_update_bits(%struct.regmap* %5, i32 %6, i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* %2, align 4
  br label %29

14:                                               ; preds = %1
  %15 = load %struct.regmap*, %struct.regmap** %3, align 8
  %16 = load i32, i32* @SC27XX_CLK_EN0, align 4
  %17 = load i32, i32* @SC27XX_RTC_EN, align 4
  %18 = load i32, i32* @SC27XX_RTC_EN, align 4
  %19 = call i32 @regmap_update_bits(%struct.regmap* %15, i32 %16, i32 %17, i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %14
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %29

24:                                               ; preds = %14
  %25 = load %struct.regmap*, %struct.regmap** %3, align 8
  %26 = load i32, i32* @SC27XX_RGB_CTRL, align 4
  %27 = load i32, i32* @SC27XX_RGB_PD, align 4
  %28 = call i32 @regmap_update_bits(%struct.regmap* %25, i32 %26, i32 %27, i32 0)
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %24, %22, %12
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @regmap_update_bits(%struct.regmap*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
